--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <h1>Benuvenuto nella pagina di Alex Marongiu</h1>
-    <img src="foto.jpg">
+    <img src="Schema_7Segment_1digit.png">
   </body>
 </html>
